fixed the wrapping issue on the footer

--- a/sites/all/themes/lapcat/assets/less/footer.less
+++ b/sites/all/themes/lapcat/assets/less/footer.less
@@ -96,7 +96,7 @@ footer {
    li{
     font-size:1.3em;
     padding:3px;
-    a{ color:@colorLight60; }
+    a{ color:@colorLight60; white-space:nowrap;}
     } 
   }
 }
